--- a/wercker.yml
+++ b/wercker.yml
@@ -1,3 +1,4 @@
+
 box: pitervergara/geodjango:nexchange
 
 dev:
@@ -81,6 +82,28 @@ dev:
           cd .git/hooks/
           ln -fs ../../.pre-commit.sh pre-commit
           cd -
+    - create-file:
+        name: Create cron invoked script to run ticker
+        filename: /ticker.sh
+        overwrite: true
+        content: |-
+          #!/bin/bash
+          #
+          export DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
+          export POSTGIS_ENV_POSTGRES_USER=${POSTGIS_ENV_POSTGRES_USER}
+          export POSTGIS_ENV_POSTGRES_PASSWORD=${POSTGIS_ENV_POSTGRES_PASSWORD}
+          export POSTGIS_ENV_POSTGRES_DB=${POSTGIS_ENV_POSTGRES_DB}
+          export POSTGIS_PORT_5432_TCP_ADDR=${POSTGIS_PORT_5432_TCP_ADDR}
+          export POSTGIS_PORT_5432_TCP_PORT=${POSTGIS_PORT_5432_TCP_PORT}
+          #
+          cd ${WERCKER_SOURCE_DIR}
+          /usr/local/bin/python manage.py ticker >> /var/log/cron.log 2>&1
+    - script:
+        name: Add cron job
+        code: |
+          chmod +x /ticker.sh
+          echo "* * * * * root /ticker.sh" > /etc/crontab
+          cron
     - internal/watch:
         code: newrelic-admin run-program python manage.py runserver 0.0.0.0:8000
         reload: false 
@@ -205,6 +228,28 @@ build:
         name: set entrypoint as executable
         code: |
           chmod +x /entrypoint.sh
+    - create-file:
+        name: Create cron invoked script to run ticker
+        filename: /ticker.sh
+        overwrite: true
+        content: |-
+          #!/bin/bash
+          #
+          export DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
+          export POSTGIS_ENV_POSTGRES_USER=${POSTGIS_ENV_POSTGRES_USER}
+          export POSTGIS_ENV_POSTGRES_PASSWORD=${POSTGIS_ENV_POSTGRES_PASSWORD}
+          export POSTGIS_ENV_POSTGRES_DB=${POSTGIS_ENV_POSTGRES_DB}
+          export POSTGIS_PORT_5432_TCP_ADDR=${POSTGIS_PORT_5432_TCP_ADDR}
+          export POSTGIS_PORT_5432_TCP_PORT=${POSTGIS_PORT_5432_TCP_PORT}
+          #
+          cd ${WERCKER_SOURCE_DIR}
+          /usr/local/bin/python manage.py ticker >> /var/log/cron.log 2>&1
+    - script:
+        name: Add cron job
+        code: |
+          chmod +x /ticker.sh
+          echo "* * * * * root /ticker.sh" > /etc/crontab
+          cron
     - script:
         name: echo python information
         code: |
