--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
     "karma": "^0.13.22",
-    "karma-browserify": "^5.1.0",
     "karma-cli": "~1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-jquery": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "phantomjs-prebuilt": "~2.1",
+    "karma-browserify":"latest",
+    "browserify": "latest",
     "watchify": "latest"
   },
   "scripts": {
