--- a/package.json
+++ b/package.json
@@ -8,27 +8,22 @@
   },
   "devDependencies": {
     "browserify": "latest",
-    "htmllint-cli": "0.0.5",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
     "karma": "^0.13.22",
-    "karma-browserify": "latest",
     "karma-cli": "~1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-jquery": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs-prebuilt": "~2.1",
-    "watchify": "latest"
+    "phantomjs-prebuilt": "~2.1"
   },
   "scripts": {
     "lint": "jshint static/js/**",
     "test": "karma start --single-run",
     "bower": "cd static && bower install --allow-root && cd - ",
-    "bower-prd": "cd static && bower install --allow-root --production && cd - ",
-    "build-js": "browserify static/js/main.js > static/js/bundle.js",
-    "watch-js": "watchify static/js/main.js -o static/js/bundle.js -v"
+    "bower-prd": "cd static && bower install --allow-root --production && cd - "
   },
   "repository": {
     "type": "git",
