test_selenium sell

--- a/wercker.yml
+++ b/wercker.yml
@@ -372,7 +372,21 @@ tests:
         name: Validate New Relic config file
         code: |
           newrelic-admin validate-config ${NEW_RELIC_CONFIG_FILE}
+    - script:
+        name: Install Phantomjs tests frontend
+        code: |
+          cd /usr/local/share
+          sudo wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.8-linux-x86_64.tar.bz2
+          sudo tar xfj phantomjs-1.9.8-linux-x86_64.tar.bz2
+          sudo ln -s /usr/local/share/phantomjs-1.9.8-linux-x86_64/bin/phantomjs /usr/local/share/phantomjs
+          sudo ln -s /usr/local/share/phantomjs-1.9.8-linux-x86_64/bin/phantomjs /usr/local/bin/phantomjs
+          sudo ln -s /usr/local/share/phantomjs-1.9.8-linux-x86_64/bin/phantomjs /usr/bin/phantomjs
 
+    - script:
+        name: Test_selenium
+        code: |
+          cd /pipeline/source
+#          python manage.py test_selenium
 
 static-validation:
   steps:
