--- a/wercker.yml
+++ b/wercker.yml
@@ -76,6 +76,10 @@ dev:
         code: |
           python manage.py loaddata core/fixtures/withdraw_address.json
     - script:
+        name: Django import affiliate program fixture
+        code: |
+          python manage.py loaddata core/fixtures/affiliate_program.json
+    - script:
         name: Django run ticker update prices command
         code: |
           python manage.py ticker
