Clean wercker.yml
remove comments and sudo occurances

--- a/wercker.yml
+++ b/wercker.yml
@@ -315,12 +315,12 @@ deploy:
           /usr/bin/env
           echo "env of env"
           # Login to docker hub (for private images)
-          sudo docker login \
+          docker login \
             -u $DOCKER_HUB_USER \
             -p $DOCKER_HUB_PASSWORD
           # Start new instance
-          sudo -E docker-compose -f /nexchange/docker-compose.yml pull
-          sudo -E docker-compose -f /nexchange/docker-compose.yml up -d
+          docker-compose -f /nexchange/docker-compose.yml pull
+          docker-compose -f /nexchange/docker-compose.yml up -d
         EOF
 
 tests:
@@ -366,16 +366,6 @@ tests:
         name: Validate New Relic config file
         code: |
           newrelic-admin validate-config ${NEW_RELIC_CONFIG_FILE}
-    - script:
-        name: Install Phantomjs tests frontend
-        code: |
-          #cd /usr/local/share
-          #sudo wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.8-linux-x86_64.tar.bz2
-          #sudo tar xfj phantomjs-1.9.8-linux-x86_64.tar.bz2
-          #sudo ln -s /usr/local/share/phantomjs-1.9.8-linux-x86_64/bin/phantomjs /usr/local/share/phantomjs
-          #sudo ln -s /usr/local/share/phantomjs-1.9.8-linux-x86_64/bin/phantomjs /usr/local/bin/phantomjs
-          #sudo ln -s /usr/local/share/phantomjs-1.9.8-linux-x86_64/bin/phantomjs /usr/bin/phantomjs
-
     - script:
         name: Test_selenium
         code: |
