--- a/wercker.yml
+++ b/wercker.yml
@@ -54,7 +54,7 @@ dev:
     - script:
         name: Django compile messages
         code: |
-          # python manage.py compilemessages
+           python manage.py compilemessages
     - script:
       name: Django create superuser
       code: |
@@ -319,8 +319,8 @@ deploy:
             -u $DOCKER_HUB_USER \
             -p $DOCKER_HUB_PASSWORD
           # Start new instance
-          sudo -E docker-compose -f /nexchange/docker-compose.yml pull
-          sudo -E docker-compose -f /nexchange/docker-compose.yml up -d
+          docker-compose -f /nexchange/docker-compose.yml pull
+          docker-compose -f /nexchange/docker-compose.yml up -d
         EOF
 
 tests:
