--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
             - /nexchange/database:/var/lib/postgresql/data
         restart: always
     app:
-        image: onitsoft/nexchange:${DOCKER_IMAGE_TAG}
+        image: onit/nexchange:${DOCKER_IMAGE_TAG}
         volumes:
             - /nexchange/mediafiles:/usr/share/nginx/html/media
             - /nexchange/staticfiles:/usr/share/nginx/html/static
