fix css input colors, test deployment

--- a/wercker.yml
+++ b/wercker.yml
@@ -54,7 +54,7 @@ dev:
     - script:
         name: Django compile messages
         code: |
-           python manage.py compilemessages
+           # python manage.py compilemessages
     - script:
       name: Django create superuser
       code: |
